--- a/css/articles/2.md
+++ b/css/articles/2.md
@@ -159,7 +159,7 @@ p ~ p {}
     <p>あいうえお</p>
     <p>あいうえお</p>
     <p class="hoge">あいうえお</p>
-    <div>あいうえお</div>
+    <div class="hoge">あいうえお</div>
     <p>あいうえお</p>
   </div>
   <p>かきくけこ</p>
@@ -186,15 +186,15 @@ p.hoge {}
     <div>あいうえお</div>
     <p>あいうえお</p>
   </div>
-  <p>かきくけこ</p>
+  <span>かきくけこ</span>
 </main>
 ```
 
 ```css
-div, .hoge {}
+span, .hoge {}
 ```
 
-こうすると、 `div` またはclassが `hoge` のものを指定するようになります。
+こうすると、 `span` またはclassが `hoge` のものを指定するようになります。
 
 ### 他にもいくつか…
 
